--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://bezlemma.github.io/ChickyBase/'
+baseURL = 'https://chickybase.com/'
 canonifyURLs = false
 languageCode = 'en-us'
 title = "ChickyBase"
